test/k8s/manifests/netcat-ds.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netcatds
  namespace: default
spec:
  selector:
    matchLabels:
      zgroup: netcatds
  template:
    metadata:
      labels:
        zgroup: netcatds
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: netcat
        image: quay.io/cilium/demo-client:1.0
        imagePullPolicy: IfNotPresent
        command: [ "sleep" ]
        args:
          - "1000h"
        ports:
          - containerPort: 8888
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - effect: NoSchedule
        key: node.cloudprovider.kubernetes.io/uninitialized
        value: "true"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "netcat-ds"
spec:
  description: "L7 policy for incoming http "
  endpointSelector:
    matchLabels:
      zgroup: netcatds
  ingress:
  - fromEndpoints:
    - matchLabels:
        zgroup: netcatds
    toPorts:
    - ports:
      - port: "8888"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/public"
